<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="svsDisable">SVS</string>
    <string name="svsEnable">SVS</string>
    <string name="gstDisable">GST</string>
    <string name="gstEnable">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each">Each Pays:</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
</resources>
